[package]
name = "tiny-nrf52"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

[dependencies]
cortex-m-rt  = "0.6.10"
cortex-m     = "0.6.1"
nb           = "0.1.2"
heapless     = "0.5.1"
embedded-hal = "0.2"
rtt-target   = {version = "0.2.0", features = ["cortex-m"] }
embedded-graphics = "0.6.2"

[dependencies.ili9341]
version = "0.3.0"
path = "../ili9341-rs"

[dependencies.nrf52840-hal]
version = "0.10.0"
features = ["rt"]

[dependencies.panic-persist]
version = "0.2.1"
default-features = false
features = ["utf8"]

[profile.dev]
lto             = true
panic           = "abort"
debug           = true
incremental     = false
codegen-units   = 1
opt-level       = 0

[profile.release]
lto             = true
panic           = "abort"
debug           = true
incremental     = false
codegen-units   = 1
opt-level       = 's'

[patch.crates-io]
nrf-hal-common = { path = "../nrf-hal/nrf-hal-common" }
